Added blizzard and retro themes. Added keyboard events triggers. Added new random content service

--- a/app/partials/home-contact.html
+++ b/app/partials/home-contact.html
@@ -33,8 +33,12 @@
 							<textarea name="" id="" placeholder="Your message"></textarea>
 						</div>
 						<div class="col-sm-12">
-						 <button id="singlebutton" name="singlebutton" class="pull-right">Send</button>
-						 <button id="singlebutton" name="singlebutton" class="pull-right">Reset</button>
+						 <span class="pull-right">
+							<span>Send</span>
+						 </span>
+						 <span class="pull-right">
+						 	<span>Reset</span>
+						 </span>
 						</div>
 					</form>
 				</div>
