--- a/app/partials/home-words.html
+++ b/app/partials/home-words.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<span class="section__badge"></span>
 			<h2 class="section__title">Some random words</h2>
-			<span class="section__reload" ng-click="main.loadRandomWords()"><i class="fa fa-refresh"></i></span>
+			<span class="section__reload" ng-click="main.setRandomWords()"><i class="fa fa-refresh"></i></span>
 		</div>
 	</div>
 	<div class="container">
