--- a/app/styles/themes/theme-agnostic.scss
+++ b/app/styles/themes/theme-agnostic.scss
@@ -2,6 +2,9 @@
 @import "../variables/colorPalette";
 @import "../variables/mixins";
 
+$theme-gray-light: #E8E8E8;
+$theme-gray-dark: #1E1E1E;
+
 body {
 	background-color: #FFF;
 }
@@ -19,19 +22,24 @@ body {
 		margin: 8px 0;
 		padding: 0;
 		font-size: 36px;
-		color: $darkGray;
+		color: $theme-gray-dark;
 		font-weight: 700;
 	}
 
 	p {
 		font-weight: 400;
-		color: $darkGray;
+		color: $theme-gray-dark;
 	}
 
 	// Layout
 
 	.section__header {
 		margin-top: 30px;
+	}
+
+	.section__reload {
+		border-radius: 50%;
+		background-color: var(--secondary-color);
 	}
 
 	// Footer
@@ -69,7 +77,7 @@ body {
 
 // Nav bar
 #home-nav {
-	background: $darkGray url("../images/retroTile.png") repeat scroll center;
+	background: $theme-gray-dark url("../images/retroTile.png") repeat scroll center;
 
 	.nav__logo {
 
@@ -127,6 +135,7 @@ body {
 		background-color: transparent;
 		border: 2px solid var(--primary-color);
 		transition: all 0.4s ease-in-out;
+
 		&:hover {
 			color: #FFF;
 			background-color: var(--primary-color);
@@ -138,37 +147,32 @@ body {
 // Skills
 
 #home-skills {
-	.col-sm-4 {
-		margin-top: 15px;
-	}
 
 	.skills__item {
 		color: #FFF;
-		border: 5px solid $darkGray;
+		background-color: $theme-gray-light;
 
 		h3 {
-			text-align: center;
 			position: relative;
 			margin: 0;
-			padding: 50px 15px 15px;
-			color: $darkGray;
+			padding: 25px 15px 15px;
+			color: var(--primary-color);
 
 			&:before {
-				position: absolute;
 				content: "";
-				margin-left: -15px;
-				width: 30px;
+				position: absolute;
+				left: 15px;
+				bottom: 0;
+				width: 25px;
 				height: 4px;
-				left: 50%;
-				bottom: -4px;
-				background-color: $darkGray;
+				background-color: var(--primary-color);
 			}
 		}
 
 		p {
 			margin: 0;
 			padding: 15px;
-			color: var(--secondary-color);
+			color: $theme-gray-dark;
 		}
 	}
 
@@ -176,7 +180,7 @@ body {
 		margin-bottom: 10px;
 		padding: 0;
 		font-size: 18px;
-		color: $darkGray;
+		color: $theme-gray-dark;
 		font-weight: 300;
 		text-transform: lowercase;
 		background-color: transparent;
@@ -195,8 +199,7 @@ body {
 	margin-bottom: 15px;
 
 	.wrapper {
-		padding-top: 20px;
-		background-color: $lightGray;
+		background-color: #E8E8E8;
 	}
 
 	p {
@@ -211,15 +214,8 @@ body {
 	margin-bottom: 15px;
 
 	.wrapper {
-		.row {
-			margin-left: 0;
-			margin-right: 0;
-			padding-top: 30px;
-		}
-	}
-
-	p {
 		padding: 15px;
+		background-color: #E8E8E8;
 	}
 }
 
@@ -229,7 +225,7 @@ body {
 #home-team {
 	margin-top: 15px;
 	margin-bottom: 15px;
-	background-color: $lightGray;
+	background-color: $theme-gray-light;
 	border-bottom: 5px solid var(--primary-color);
 
 	.container .wrapper {
@@ -256,9 +252,9 @@ body {
 	h3 {
 		font-size: 28px;
 		font-weight: 700;
-		color: $darkGray;
+		color: $theme-gray-dark;
 		text-transform: uppercase;
-		border-bottom: 4px solid $darkGray;
+		border-bottom: 4px solid $theme-gray-dark;
 	}
 
 	h5 {
@@ -304,8 +300,8 @@ body {
 		li {
 			font-size: 18px;
 			font-weight: 700;
-			color: $darkGray;
-			border-bottom: 4px solid $darkGray;
+			color: $theme-gray-dark;
+			border-bottom: 4px solid $theme-gray-dark;
 		}
 	}
 
@@ -336,19 +332,22 @@ body {
 
 #home-blog {
 
-	.row {
-		margin-right: 0;
-		margin-left: 0;
-		padding-top: 15px;
+	.blog__item {
+		padding: 15px;
+		background-color: $theme-gray-light;
 	}
 
 	h3 {
-		color: $darkGray;
+		color: $theme-gray-dark;
 	}
 
 	h5 {
 		font-weight: 700;
 		color: var(--primary-color);
+	}
+
+	p {
+		margin-top: 15px;
 	}
 }
 
@@ -358,23 +357,29 @@ body {
 #home-contact {
 	margin-bottom: 30px;
 
-	.row {
-		margin-right: 0;
-		margin-left: 0;
-		padding-top: 20px;
-	}
-
-	.textBox {
-		min-height: 203px;
+	.contact__message {
 		padding: 15px;
+		background-color: $theme-gray-light;
 	}
 
 	h3 {
 		font-weight: 300;
 		color: var(--primary-color);
 	}
+
 	p {
-		color: $darkGray;
+		color: $theme-gray-dark;
+	}
+
+	.contact__icons {
+		li {
+			border-radius: 50%;
+			background-color: var(--secondary-color);
+
+			span {
+				color: #FFF;
+			}
+		}
 	}
 
 	input,
